# haskell-exam-arithm

./: .gitignore  .travis.yml  Arithm.hs  Main.hs  README.md  my-project.cabal
tests/: test-arithm.hs
