name:                my-project
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/my-project#readme
license:             BSD3
author:              Author name here
copyright:           2017 Author name here
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

Test-Suite test-arithm
  hs-source-dirs: .
  type:          exitcode-stdio-1.0
  main-is:       tests/test-arithm.hs
  other-modules: Arithm
  default-language:    Haskell2010
  build-depends: base,  parsec, text, HUnit
